--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <ul>
                     <li>
                         <p>▽ まこと。</p>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/vmN9Af0N__Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/1ilRKGb3pb4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </li>
                 </ul>
             </section>
@@ -70,7 +70,7 @@
                 <ul>
                     <li>
                         <p>▽ みやぢ</p>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/UQPBDl_rJB8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/gFISr7Y7iGA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </li>
                 </ul>
             </section>
